--- a/spring-blessing/css/style.css
+++ b/spring-blessing/css/style.css
@@ -159,8 +159,8 @@ html,body {
 		-webkit-transform: rotate(0deg);
 		        transform: rotate(0deg);
 	}
-	0% {
-		-webkit-transform: rotate(0deg);
+	100% {
+		-webkit-transform: rotate(360deg);
 		        transform: rotate(360deg);
 	}
 }
@@ -198,8 +198,8 @@ html,body {
 		        transform: rotate(0deg);
 	}
 	100% {
-		-webkit-transform: rotate(0deg);
-		        transform: rotate(0deg);
+		-webkit-transform: rotate(360deg);
+		        transform: rotate(360deg);
 	}
 }
 #page2 .p2_2016 {
@@ -221,8 +221,9 @@ html,body {
 	        transition: .5s;
 }
 #page3.fadeIn {
-	-webkit-transform: translate(0,-100%);
-	        transform: translate(0,-100%)
+	opacity: .8;
+	/* -webkit-transform: translate(0,-100%);
+	        transform: translate(0,-100%) */
 }
 #page3 .bg {
   background: url("../images/p3_bg.jpg") no-repeat center center;
